name:                reflex-cocos2d
version:             0.1.0.0
synopsis:            Reflex bindings for cocos2d-js
license:             MIT
license-file:        LICENSE
author:              Lingnan Dai
maintainer:          lingnan.d@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Reflex.Cocos2d
                     , Reflex.Cocos2d.Class
                     , Reflex.Cocos2d.Internal
                     , Reflex.Cocos2d.Node
                     , Reflex.Cocos2d.Types
                     , Reflex.Cocos2d.Attributes
                     , Reflex.Cocos2d.Event
                     , Reflex.Cocos2d.Label
                     , Reflex.Cocos2d.Widget
                     , Reflex.Cocos2d.Audio
                     , Reflex.Cocos2d.CocoStudio
                     , Reflex.Cocos2d.Chipmunk
                     , Reflex.Extra
                     , Reflex.State
  -- other-modules:       
  ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
  -- ghc-options:         -w -fprint-potential-instances
  -- -Wall -fno-warn-orphans -fno-warn-name-shadowing
  -- other-extensions:    
  
  build-depends:       base >=4.8 && <4.10
                     , colour
                     , containers
                     , mtl
                     , ref-tf
                     , dependent-sum
                     , diagrams-lib
                     , reflex
                     , lens
                     , time
                     , data-default
                     , MonadRandom
                     , contravariant
                     , exception-transformers
                     , free
                     , cocos2d-hs
                     , Hipmunk
                     , StateVar
                     -- TODO: integrate the func into cocos2d-hs?
                     , hoppy-runtime
  hs-source-dirs:      src
  default-language:    Haskell2010
