name:                reflex-cocos2d
version:             0.1.0.0
synopsis:            Reflex bindings for cocos2d-js
license:             MIT
license-file:        LICENSE
author:              Lingnan Dai
maintainer:          lingnan.d@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Reflex.Cocos2d
                     , Reflex.Cocos2d.Finalize.Base
                     , Reflex.Cocos2d.Finalize.Class
                     , Reflex.Cocos2d.Builder.Base
                     , Reflex.Cocos2d.Builder.Class
                     , Reflex.Cocos2d.Builder.Node
                     , Reflex.Cocos2d.Builder.Label
                     , Reflex.Cocos2d.Builder.Widget
                     , Reflex.Cocos2d.Builder.CocoStudio
                     , Reflex.Cocos2d.Accum.Class
                     , Reflex.Cocos2d.Attributes.Base
                     , Reflex.Cocos2d.Attributes.Node
                     , Reflex.Cocos2d.FastTriggerEvent.Class
                     , Reflex.Cocos2d.Misc.Audio
                     , Reflex.Cocos2d.Misc.Chipmunk
                     , Reflex.Cocos2d.Event
                     , Reflex.Cocos2d.Types
                     , Reflex.Cocos2d.Internal
                     , Reflex.Extra
                     , Reflex.State
                     , Data.Pool
  other-modules:       Reflex.Cocos2d.Internal.Global
  ghc-options:         -Wall -fno-warn-orphans -fno-warn-name-shadowing
  -- ghc-options:         -w -fprint-potential-instances
  -- -Wall -fno-warn-orphans -fno-warn-name-shadowing
  -- other-extensions:    
  
  build-depends:       base >=4.8 && <4.10
                     , colour
                     , containers
                     , semigroups
                     , mtl
                     , monad-control
                     , prim-uniq
                     , primitive
                     , dependent-map
                     , ref-tf
                     , dependent-sum
                     , diagrams-lib
                     , reflex
                     , lens
                     , time
                     , data-default
                     , contravariant
                     , exception-transformers
                     , free
                     , cocos2d-hs
                     , Hipmunk
                     , StateVar
                     , MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010
